--- a/views/settings.html
+++ b/views/settings.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Asana Droplr Preview Settings</title>
+    <title>Asana Preview </title>
     <link type="text/css"  href="../css/bootstrap.min.css" rel="stylesheet"/>
     <link type="text/css"  href="../css/bootstrap-theme.min.css" rel="stylesheet"/>
     <link type="text/css"  href="../css/settings.css" rel="stylesheet"/>
@@ -12,7 +12,7 @@
   <body>
      <div class="main">
        <div class="panel panel-primary" >
-         <div class="panel-heading">Asana Preview Settings</div>
+         <div class="panel-heading">Asana Preview</div>
          <div class="panel-body">
            <nav class="navbar navbar-default">
              <div class="container-fluid">
@@ -82,7 +82,7 @@
                 <h6 class="text-primary">Contact</h6>
                 <address>
                   <strong>d3fy Team</strong><br>
-                  <small>http://d3fy.com/</small>
+                 <a href="http://d3fy.com/" target="_blank"> <small>ttp://d3fy.com/</small> <a>
                 </address>
 
              </div>
