--- a/views/settings.html
+++ b/views/settings.html
@@ -12,7 +12,7 @@
   <body>
      <div class="main">
        <div class="panel panel-primary" >
-         <div class="panel-heading">Asana Preview</div>
+         <div class="panel-heading"><img class="svc-icon" src="../images/icon.png" alt="Asana Preview" style="margin-right:5px;"/>Asana Preview</div>
          <div class="panel-body">
            <nav class="navbar navbar-default">
              <div class="container-fluid">
