--- a/views/settings.html
+++ b/views/settings.html
@@ -12,7 +12,7 @@
   <body>
      <div class="main">
        <div class="panel panel-primary" >
-         <div class="panel-heading"><img class="svc-icon" src="../images/icon.png" alt="Asana Preview" style="margin-right:5px;"/>Asana Preview</div>
+         <div class="panel-heading"><img  id="icon"  src="../images/icon.png" alt="Asana Preview"/>Asana Preview</div>
          <div class="panel-body">
            <nav class="navbar navbar-default">
              <div class="container-fluid">
@@ -81,8 +81,8 @@
                 <hr>
                 <h6 class="text-primary">Contact</h6>
                 <address>
-                  <strong>d3fy Team</strong><br>
-                 <a href="http://d3fy.com/" target="_blank"> <small>ttp://d3fy.com/</small> <a>
+                  <strong>D3fy Team</strong><br>
+                 <a href="https://www.d3fy.com/" target="_blank"> <small>https://d3fy.com/</small> <a>
                 </address>
 
              </div>
